# GW_response

./: .flake8  .gitignore  .readthedocs.yaml  CLAUDE.md  LIGO.pkl  README.md  laptop_benchmark.json  laptop_full_benchmark.json  pyproject.toml  requirements.txt  setup.py  tutorial.ipynb  tutorial_LIGO.ipynb  tutorial_LISA.ipynb
.github/workflows/: python-package.yml
docs/: conf.py  index.md  installation.md  quickstart.md
docs/api/: constants.rst  detector.rst  index.md  lisa.rst  noise.rst  response.rst  single_link.rst  tdi.rst  utils.rst
examples/: reproduce_flauger_et_al_2020.py
gw_response/: __init__.py  api.py  benchmark.py  config.py  constants.py  detector.py  earth_based_datastream.py  ligo.py  lisa.py  noise.py  parallel.py  presets.py  response.py  response_ligo.py  results.py  single_link.py  tdi.py  utils.py
requirements/: requirements.txt  requirements3.11.txt  requirements3.8.txt
scripts/: benchmark_comparison.py
testing/: test_api.py  test_constants.py  test_ligo.py  test_lisa.py  test_noise.py  test_optimization_equivalence.py  test_response.py  test_single_link.py  test_tdi.py  test_utils.py
testing/test_data/: acc_noise.npy  arm_length_exp.npy  arm_lengths.npy  arms_matrix.npy  e1.npy  e1L.npy  e1R.npy  e1c.npy  e1p.npy  e2.npy  frequencies.npy  geometrical_factor.npy  int_noise.npy  kl_vector.npy  lisa_analytical_positions_sat_1.npy  lisa_analytical_positions_vm.npy  lisa_analytical_x_positions.npy  lisa_analytical_y_positions.npy  lisa_analytical_z_positions.npy  lisa_numerical_orbit_data.txt  lisa_satellite_positions.npy  lisaorbits_numerical_orbit_data.h5  oms_noise_single_link.npy  pixel_angular_map.npy  pixel_angular_map_16.npy  pixel_phi.npy  pixel_phi_16.npy  pixel_theta.npy  pixel_theta_16.npy  quadratic_response_AET_LL.npy  quadratic_response_AET_RR.npy  quadratic_response_integrated.npy  response_XYZ_RR.npy  sine_factors.npy  tdi_AET.npy  tdi_AE_Sagnac_zeta.npy  tdi_AE_zeta.npy  tdi_Sagnac.npy  tdi_XYZ.npy  tdi_matrix_AET.npy  (+6 more)
testing/test_data_ligo/: arm_length_exp.npy  arm_lengths.npy  e1.npy  e1L.npy  e1R.npy  e1c.npy  e1p.npy  e2.npy  frequencies.npy  geometrical_factor.npy  kl_vector.npy  ligo_arms_matrix.npy  ligo_psd.npy  ligo_satellite_positions.npy  pixel_angular_map.npy  pixel_angular_map_16.npy  pixel_theta.npy  pixel_theta_16.npy  u.npy  unit_vector.npy  v.npy  x_vector.npy
