[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gw_response"
version = "1.0.0"
description = "A jit-enhanced python code to compute the response function of some GW interferometer"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Mauro Pieroni", email = "mauro.pieroni@cern.ch" },
    { name = "James Alvey", email = "j.b.g.alvey@uva.nl" },
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.26.4; python_version>='3.9'",
    "numpy==1.24.4; python_version<'3.9'",
    "jax>=0.4.25; python_version>='3.9'",
    "jax==0.4.13; python_version<'3.9'",
    "jaxlib>=0.4.25; python_version>='3.9'",
    "jaxlib==0.4.13; python_version<'3.9'",
    "chex>=0.1.85; python_version>='3.9'",
    "chex==0.1.7; python_version<'3.9'",
    "healpy>=1.16.6; python_version>='3.9'",
    "healpy==1.16.2; python_version<'3.9'",
    "typing_extensions>=4.10.0",
]

[tool.setuptools.packages.find]
include = ["gw_response*"]

[tool.black]
line_length = 88
