[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gw_response"
version = "1.0.0"
description = "A jit-enhanced python code to compute the response function of some GW interferometer"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Mauro Pieroni", email = "mauro.pieroni@cern.ch" },
    { name = "James Alvey", email = "j.b.g.alvey@uva.nl" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "jax>=0.4.25",
    "jaxlib>=0.4.25",
    "chex>=0.1.85",
    "jax-healpy>=0.7; python_version>='3.11'",
    "jax-healpy>=0.6,<0.7; python_version<'3.11'",
    "typing_extensions>=4.10.0",
    "interpax>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["gw_response*"]

[tool.black]
line_length = 88
