[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gw_response"
version = "1.0.0"
description = "A jit-enhanced python code to compute the response function of some GW interferometer"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Mauro Pieroni", email = "mauro.pieroni@cern.ch" },
    { name = "James Alvey", email = "jbga2@cam.ac.uk" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "jax>=0.4.25",
    "jaxlib>=0.4.25",
    "chex>=0.1.85",
    "jax-healpy>=0.7; python_version>='3.11'",
    "jax-healpy>=0.6,<0.7; python_version<'3.11'",
    "typing_extensions>=4.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "flake8>=7.0",
    "black>=24.0",
]
# GPU acceleration via NVIDIA CUDA 12 wheels. Installs the CUDA-enabled build
# of JAX (which supersedes the CPU-only jaxlib pulled in by default).
cuda = [
    "jax[cuda12]>=0.4.25",
]
# Sphinx documentation build (also used by Read the Docs).
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]

[project.urls]
Homepage = "https://github.com/Mauropieroni/GW_response"
Repository = "https://github.com/Mauropieroni/GW_response"

[tool.setuptools.packages.find]
include = ["gw_response*"]

[tool.black]
line_length = 88
